# serializer version: 1
# name: test_single_zone_switch[switch.single_zone_fridge_supercool-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.single_zone_fridge_supercool',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'SuperCool',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SuperCool',
    'platform': 'liebherr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'super_cool',
    'unique_id': 'single_zone_id_super_cool_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_single_zone_switch[switch.single_zone_fridge_supercool-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Single Zone Fridge SuperCool',
    }),
    'context': <ANY>,
    'entity_id': 'switch.single_zone_fridge_supercool',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_fridge_bottom_zone_superfrost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_fridge_bottom_zone_superfrost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bottom zone SuperFrost',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bottom zone SuperFrost',
    'platform': 'liebherr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'super_frost_bottom_zone',
    'unique_id': 'test_device_id_super_frost_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_fridge_bottom_zone_superfrost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Fridge Bottom zone SuperFrost',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_fridge_bottom_zone_superfrost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.test_fridge_nightmode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_fridge_nightmode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'NightMode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NightMode',
    'platform': 'liebherr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_mode',
    'unique_id': 'test_device_id_night_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_fridge_nightmode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Fridge NightMode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_fridge_nightmode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.test_fridge_partymode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_fridge_partymode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PartyMode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PartyMode',
    'platform': 'liebherr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'party_mode',
    'unique_id': 'test_device_id_party_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_fridge_partymode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Fridge PartyMode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_fridge_partymode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_fridge_top_zone_supercool-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_fridge_top_zone_supercool',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Top zone SuperCool',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Top zone SuperCool',
    'platform': 'liebherr',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'super_cool_top_zone',
    'unique_id': 'test_device_id_super_cool_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_fridge_top_zone_supercool-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Fridge Top zone SuperCool',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_fridge_top_zone_supercool',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
